<resources>
    <string name="app_name">10,000 sentences</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sentence_quiz">SentenceQuizActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_senteces">Download sentences</string>
    <string name="random_sentence">Random sentence</string>
    <string name="download_collection">Download collection</string>
    <string name="todo">Todo</string>
    <string name="retry_again">Retry later</string>
    <string name="done">Done</string>
    <string name="finalize_sentence_title">What next?</string>
    <string name="correct">Correct {fa-thumbs-o-up}</string>
    <string name="repeat_later">Repeat later &amp; next sentence</string>
    <string name="continue_learning">Continue learning</string>
    <string name="too_many_errors">Too many errors {fa-thumbs-o-down}</string>
    <string name="title_activity_tmp">TmpActivity</string>
    <string name="start_quiz">Start quiz</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="stats">Stats</string>
    <string name="reload_languages">Reload languages</string>
    <string name="collections">Collections</string>
    <string name="no_newtork">No network available</string>
    <string name="error_retrieving">Couldn\'t retrieve data</string>
    <string name="imported">Imported</string>
    <string name="no_sentence_found">No sentences found</string>
    <string name="translate">Translate</string>
    <string name="share">Open with...</string>
    <string name="select_text">Select text</string>
    <string name="empty">String empty</string>
    <string name="ignored">Ignore</string>
    <string name="todo_sentences">TODO sentences</string>
    <string name="done_sentences">DONE sentences</string>
    <string name="repeat_sentences">REPEAT sentences</string>
    <string name="ignored_sentences">IGNORED sentences</string>
    <string name="ignore_sentence">Ignore this sentence</string>
    <string name="tts_not_inititialized">Text to speech not (yet) initialized</string>
    <string name="tts_language_not_available">Text to speech language not installed</string>
    <string name="settings">Settings</string>
    <string name="done_sentence">Mark as DONE</string>
    <string name="todo_sentence">Mark as TODO</string>
    <string name="ignored_sentence">Mark as IGNORED</string>
    <string name="repeat_sentence">Mark as REPEAT</string>
    <string name="unexpected_error">An unexpected error happened</string>
    <string name="info_contents" formatted="false"><![CDATA[<p>     This application is open source and licensed under the Apache 2.0 license. The source is available here: <a href=\"https://github.com/tkrajina/10000sentences\">github.com/tkrajina/10000sentences</a>. </p> <p>     All the language learning materials are retrieved and prepared from the <a href=\"https://tatoeba.org\">Tatoeba website</a>, and is licensed as Creative Commons Attribution 2.0.  </p> <hr> <p>     Version: <strong>%s / %s</version> </p>]]></string>
    <string name="repeat">Repeat</string>
    <string name="app_description">Learn new words...</string>
    <string name="remove_collection">Remove this collection</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="really_delete_collection" formatted="false"><![CDATA[Really delete collection?
If you really want this, type: %s]]></string>
    <string name="not_deleted">Not deleted</string>
    <string name="collection_deleted">Collection deleted</string>
    <string name="all_sentences">Sentences</string>
    <string name="learn_known_sentences">Learn known sentences</string>
    <string name="read_sentence">Read sentence</string>
    <string name="sentences">Sentences</string>
    <string name="downloaded_colections">Downloaded collections</string>
    <string name="for_">for</string>
    <string name="speakers">speakers</string>
    <string name="open_in_tatoeba">Open in Tatoeba</string>
    <string name="error_opening_link">Error opening url</string>
    <string name="for_speakers_of">...for speakers of:</string>
    <string name="time_spent_daily">Total time spent practicing</string>
    <string name="sentences_marked_as_done">Sentences marked as DONE</string>
    <string name="help_contents">## Can I learn a language by using this app?\n\nThis app is a helper tool to help you increase your vocabulary by exposing you to thousands of sentences. In addition to using it, you should also pursue other (more traditional) ways of learning a language: speaking to native speakers, learning grammar, etc.\n\n## Workflow\n\nThere are many ways to use this application. If you are a serious learner, you will probably develop your own daily routine.\n\nThis application is best used in combination with a translator app (or a traditional dictionary) and a memory flashcard application (like AnkiDroid).\n\nA simple workflow idea:\n\n * Train sentence by sentence\n * If unsure about a word meaning, use a translator app to translate it (see next section for more details)\n * If not sure that the previous step really made you memorize that word, use the \"Share\" option to share the specific word in AnkiDroid (for example)\n * When you encounter a new (unknown) word:\n    * check if this word should be part of an annotation you previously created or\n    * create a new annotation\n\n## Translate\n\nAny word can be shared to any other application. For example, you can use the \"Share\" button to select the word and then select the app to open that word with (for example Google Translate).\n\nIf you use Google translate, you can enable the \"Tap to translate\" option in it. In 10,000 sentences settings enable the \"Guess to clipboard\". After each word guess you will see a Google Translate widget to get the translation of that word. (If the widget don\'t appear -- restart Google Translate).\n\nYou can also share words from Google translate directly into AnkiDroid. Just select \"share\" and then find \"AnkiDroid\" in the list.\n\n## Annotations\n\nThe application allows you to write **annotations** on words. More than one words can be annotated with the same annotation.\n\nAnnotations are best used to create your own dictionary as you proceed learning new sentences.\nIf you use annotations like a dictionary, make sure that you write them in gramatically neutral way.\nFor example, if you learn Italian, you will need to put \"camminare\" (to walk), \"cammino\" (I walk), \"camminero\" (I will walk) under one annotation (for example \"walk\").\n\nThis application is not able to discern if \"camminero\" (I will walk) and \"camminavo\" (I was walking) are one and the same word.\nIt is up to you to figure out that it must be **one** annotation, but this journey of \"figuring out\" words is part of language learning.\n\n## Text to speech (TTS)\n\nMost Android phones have text-to-speech (TTS) available for some languages. Some languages have very poor TTS voice quality. Check your phone settings to see if there is an option to download a better quality TTS. Some languages have also additional TTS applications available on the Google Play store.\n</string>
    <string name="annotation">Word annotation</string>
    <string name="annotation_for_word">Annotation for</string>
    <string name="annotation_colon">Annotation:</string>
    <string name="annotate_words">Annotate words</string>
    <string name="save">Save</string>
    <string name="annotation_saved">Annotation saved</string>
    <string name="add_word_to_this_annotation">Add word to this annotation?</string>
    <string name="word_annotations">Word annotations</string>
    <string name="annotations">Annotations</string>
    <string name="delete">Delete</string>
    <string name="annotation_deleted">Annotation deleted</string>
    <string name="remove_word_from_annotation">Remove word from annotation?</string>
    <string name="words_colon">Words:</string>
    <string name="add_to_annotation_explanation">Click below if you want to add this word to an existing annotation:</string>
    <string name="select_annotation">Select annotation</string>
    <string name="annotation_empty">Annotation empty</string>
    <string name="all">All</string>
    <string name="word_to_clipboadr">Word in clipboard</string>
    <string name="share_word">Share word</string>
    <string name="filter">Filter:</string>
    <string name="add_word">Add word</string>
    <string name="todo_desc">New sentence</string>
    <string name="retry_again_desc">Retrying sentence</string>
    <string name="done_desc">Known sentence</string>
    <string name="ignored_desc">Ignored sentence</string>
    <string name="tts_settings">TTS settings</string>
    <string name="not_downloaded">Not downloaded</string>
    <string name="first_steps">Next steps</string>
    <string name="first_steps_contents"><![CDATA[<ul><li> Enable \'Tap to translate\' in Google Translate<li> Download a sentence collection for your language<li> Practice...<li> When you encounter an unknown word -- use annotations to create your own dictionary</ul>]]></string>
    <string name="redownload_collection">(Re)download collection</string>
    <string name="not_translate_app_found">No app found for translation</string>
    <string name="previous_sentence">Previous sentence</string>
    <string name="cannot_find_sentence">Cannot find sentence</string>
</resources>
