<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_collections"
            android:title="@string/collections" />
        <item
            android:id="@+id/nav_annotations"
            android:title="@string/word_annotations" />
        <item
            android:id="@+id/nav_reload"
            android:title="@string/reload_languages" />
        <item
            android:id="@+id/nav_stats"
            android:title="@string/stats" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_tts_settings"
            android:title="@string/tts_settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/help" />
    </group>

</menu>
