<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_previous"
        android:orderInCategory="90"
        android:visible="true"
        android:title="@string/previous_sentence"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_with"
        android:orderInCategory="100"
        android:visible="true"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_in_browser"
        android:orderInCategory="110"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_done_sentence"
        android:orderInCategory="120"
        android:title="@string/done_sentence"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_todo_sentence"
        android:orderInCategory="130"
        android:title="@string/todo_sentence"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ignored_sentence"
        android:orderInCategory="140"
        android:title="@string/ignored_sentence"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_repeat_sentence"
        android:orderInCategory="150"
        android:title="@string/repeat_sentence"
        app:showAsAction="never" />
</menu>