<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable name="knownLanguage" type="info.puzz.a10000sentences.models.Language" />
        <variable name="targetLanguage" type="info.puzz.a10000sentences.models.Language" />
        <variable name="sentenceCollection" type="info.puzz.a10000sentences.models.SentenceCollection" />
    </data>

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <include layout="@layout/appbar" />

            <!-- body... -->
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_collection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="info.puzz.a10000sentences.activities.CollectionActivity">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@{targetLanguage.name}"
                        android:gravity="center"
                        android:textSize="@dimen/title_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@{targetLanguage.nativeName}"
                        android:gravity="center"
                        android:textSize="@dimen/title_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/todo"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:text="@{String.valueOf(sentenceCollection.todoCount)}"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/done"
                                android:textColor="@color/active"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:text="@{String.valueOf(sentenceCollection.doneCount)}"
                                android:textColor="@color/active"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/repeat"
                                android:textColor="@color/error"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:text="@{String.valueOf(sentenceCollection.repeatCount)}"
                                android:textColor="@color/error"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/ignored"
                                android:textColor="@color/inactive"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:text="@{String.valueOf(sentenceCollection.ignoreCount)}"
                                android:textColor="@color/inactive"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true">

                    <Button
                        android:id="@+id/random_sentence"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/random_sentence" />

                    <Button
                        android:id="@+id/random_known_sentence"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/random_known_sentence" />

                    <Button
                        android:id="@+id/all_sentences"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/all_sentences" />

                    <Button
                        android:id="@+id/download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/download_collection" />

                </LinearLayout>

            </RelativeLayout>
            <!-- ...body -->

        </android.support.design.widget.CoordinatorLayout>

        <include layout="@layout/nav_view" />

    </android.support.v4.widget.DrawerLayout>
</layout>

