<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>
        <import type="info.puzz.a10000sentences.models.SentenceCollectionType" />

        <variable name="collection" type="info.puzz.a10000sentences.models.SentenceCollection" />
        <variable name="knownLanguage" type="info.puzz.a10000sentences.models.Language" />
        <variable name="targetLanguage" type="info.puzz.a10000sentences.models.Language" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/list_padding">

        <TextView
            android:id="@+id/native_name"
            android:text="@{targetLanguage.formatNativeName(&quot;\n&quot;)}"
            android:textSize="@dimen/title_size"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/native_name">

            <LinearLayout
                android:visibility="@{collection.getSentenceCollectionType() == SentenceCollectionType.TEXT ? View.VISIBLE : View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@{collection.title}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:visibility="@{collection.getSentenceCollectionType() == SentenceCollectionType.DEFAULT ? View.VISIBLE : View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@{targetLanguage.name + &quot; &quot;}"
                        android:textStyle="bold|italic"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/for_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@{&quot; &quot; + knownLanguage.name + &quot; &quot;}"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/speakers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:visibility="@{collection.count > 0 ? View.VISIBLE : View.GONE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/smaller_text"
                    android:text="{fa-list-ol}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@{collection.formatTodoCount()}"
                    android:textSize="@dimen/smaller_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/smaller_text"
                    android:text="{fa-thumbs-o-up}"
                    android:textColor="@color/active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@{collection.formatDoneCount()}"
                    android:textSize="@dimen/smaller_text"
                    android:textColor="@color/active"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/smaller_text"
                    android:text="{fa-thumbs-o-down}"
                    android:textColor="@color/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@{collection.formatRepeatCount()}"
                    android:textSize="@dimen/smaller_text"
                    android:textColor="@color/error"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/smaller_text"
                    android:text="{fa-trash}"
                    android:textColor="@color/inactive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@{collection.formatIgnoreCount()}"
                    android:textSize="@dimen/smaller_text"
                    android:textColor="@color/inactive"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:visibility="@{collection.count == 0 ? View.VISIBLE : View.GONE}"
                android:text="@string/not_downloaded"
                android:textSize="@dimen/smaller_text"
                android:textColor="@color/inactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>
</layout>
